# jseeker

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  BATCH_ENHANCEMENT_SUMMARY.md  BATCH_PROCESSOR_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_L1_STAGED.md  CLAUDE_L2_STAGED.md  Dockerfile  E2E_TEST_REPORT.md  FINAL_TEST_DELIVERABLES.md  ISSUE_RESOLUTION_MAP.md  ISSUE_STATUS_V0.3.0.md  LEARNING_TRANSPARENCY_IMPLEMENTATION.md  PATTERN_LEARNING_FIX.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE1_AGENT3_SUMMARY.md  PHASE4_IMPLEMENTATION.md  PROJECT.md  TEST_SUITE_SUMMARY.md  baseline_test_results.txt  batch_run_output.txt  config.py  coverage.json  docker-compose.yml  launch.py  launch_argus.py  launch_both.py  launch_jseeker.py  migrate_market_field.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run.py  start.bat  test_pattern_learning.py  (+3 more)
.claude/: AUTOMATION_SETUP.md  IMPLEMENTATION_SUMMARY.md  settings.json
autojs/: launch.py  pyproject.toml
autojs/autojs/: __init__.py  apply_monitor.py  auto_apply.py
autojs/autojs/ats_runners/: base.py  greenhouse.py  workday.py
autojs/tests/: conftest.py  test_answer_bank.py  test_apply_monitor.py  test_apply_verifier.py  test_auto_apply.py  test_greenhouse_runner.py  test_site_runner_base.py  test_workday_runner.py
autojs/ui/: pipeline.py
data/: answer_bank.yaml  resume_sources.json
docs/: ATS_PARSING_GUIDE.md  AUTO_APPLY_TESTING_PLAN.md  AUTO_APPLY_TRACKER.md  BATCH_WORKFLOW_VALIDATION.md  ERROR_HANDLING.md  FeedbackFEB09.txt  FeedbackFEB09_02.txt  HOTFIX_v0.3.8.1.md  KNOWN_LIMITATIONS.md  LAUNCH_SCRIPTS_DECOUPLED.md  LEARNING_INSIGHTS_GUIDE.md  MANUAL_TESTING_GUIDE.md  PDF_STYLE_EXTRACTION.md  PHASE1_TEST_RESULTS.md  PRD.md  PROTEUS_v0.2_REPORT.md  RELEASE_v0.3.8.md  RESUME_LIBRARY_UPLOAD_IMPLEMENTATION.md  SPRINT_CHANGELOG_v0.3.12.md  TESTING_GUIDE.md  UX_DESIGN.md  jobhunterFeedbackFEB10.txt  jobhunterFeedbackFEB10_2.txt  root_issue_report_2026-02-19.md  task_7_job_discovery_enhancements.md  tracker_improvements_feb11.md  v0.3.9_changelog_draft.md
jseeker/: __init__.py  adapter.py  answer_bank.py  apply_verifier.py  ats_scorer.py  auto_apply.py  batch_processor.py  block_manager.py  browser_manager.py  feedback.py  jd_parser.py  (+16 more)
(+134 files in other folders)
